# runj

./: README.md  index.html  pyproject.toml  requirements.txt  runj.html  setup.cfg  setup.py
1.0.0/: runj.html
1.0.1/: runj.html
1.0.2/: search.js
runj/: __init__.py  __main__.py  runj.html
tests/: test_core.py
