[metadata]
description         = 'Run (and capture) CLI from python'
author              = Rudolph Pienaar
author_email        = rudolph.pienaar@childrens.harvard.edu
url                 = https://github.com/FNNDSC/jobber
license             = MIT
zip_safe            = False

[options]
packages            =
    runj
    runj/models
install_requires    =
    pfmisc
    pudb

[options.entry_points]
console_scripts     =
    runj            =  runj.__main__:main
